Fixed the hash links so they jump to sections

--- a/public/tech_fair/2025/v2/main.css
+++ b/public/tech_fair/2025/v2/main.css
@@ -130,7 +130,6 @@ main>article>section {
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  top: 20vh;
 }
 
 #home>* {
